--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -156,6 +156,10 @@
                                 <i class='bx bxs-customize mr-3'></i>
                                 <span>Permissions</span>
                             </a>
+                            <a href="{{ url_for('admin.audit_logs') }}" class="nav-item flex items-center p-3 rounded-lg">
+                                <i class='bx bx-list-check mr-3'></i>
+                                <span>Audit Logs</span>
+                            </a>
                         </div>
                    
                     <div class="pt-2">
