--- a/templates/hr/base.html
+++ b/templates/hr/base.html
@@ -134,6 +134,11 @@
                         <i class='bx bx-money text-xl'></i>
                         <span>Staff Deductions</span>
                     </a>
+                    <a href="{{ url_for('hr.payroll_status') }}" 
+                       class="flex items-center space-x-2 text-gray-300 hover:text-white">
+                        <i class='bx bxs-check-circle text-xl'></i>
+                        <span>Payroll Status</span>
+                    </a>
                 </div>
 
                 <!-- Communication -->
@@ -171,9 +176,9 @@
                 <div class="flex items-center justify-between px-6 py-4">
                     <h1 class="text-xl font-semibold text-gray-800">{% block header %}Dashboard{% endblock %}</h1>
                     <div class="flex items-center space-x-4">
-                        <button class="text-gray-500 hover:text-gray-700">
-                            <i class='bx bxs-bell text-xl'></i>
-                        </button>
+                        <!-- Notification Center -->
+                        {% include 'components/notification_center.html' %}
+                        
                         <div class="relative">
                             <button id="userMenuBtn" class="flex items-center space-x-2">
                                 <img src="https://ui-avatars.com/api/?name=HR&background=0D8ABC&color=fff" 
