--- a/templates/procurement/base.html
+++ b/templates/procurement/base.html
@@ -58,6 +58,11 @@
                         <i class='bx bxs-cart text-xl'></i>
                         <span>Purchase Orders</span>
                     </a>
+                    <a href="{{ url_for('procurement.my_approvals') }}" 
+                       class="flex items-center space-x-2 text-gray-300 hover:text-white">
+                        <i class='bx bxs-check-square text-xl'></i>
+                        <span>My Approvals</span>
+                    </a>
                    
                 </div>
 
@@ -121,15 +126,8 @@
                 <div class="flex items-center justify-between px-6 py-4">
                     <h1 class="text-xl font-semibold text-gray-800">{% block header %}Dashboard{% endblock %}</h1>
                     <div class="flex items-center space-x-4">
-                        <!-- Notifications -->
-                        <div class="relative">
-                            <button class="text-gray-500 hover:text-gray-700">
-                                <i class='bx bxs-bell text-xl'></i>
-                                <span class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full h-4 w-4 flex items-center justify-center">
-                                    3
-                                </span>
-                            </button>
-                        </div>
+                        <!-- Notification Center -->
+                        {% include 'components/notification_center.html' %}
                         
                         <!-- User Menu -->
                         <div class="relative">
